update question one

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <p>Here is what the recipe calls for</p>
 
     <div>
-      <span><b>Ingredients</b></span> <span>( probably not right...)</span>
+      <span><b>Ingredients</b></span>
+      <span><small>( probably not right...)</small></span>
       <ul>
         <li>6 Eggs</li>
         <li>2 cups of flour</li>
@@ -24,7 +25,9 @@
         <li>2 Teaspoons of baking powder</li>
         <li>1 cup of sugar</li>
       </ul>
-      <span><b>Instructions</b></span> <span>(may or may not be correct)</span>
+      <span><b>Instructions</b></span>
+
+      <span><small>(may or may not be correct)</small></span>
       <ol>
         <li>Add eggs, flour and vanilla extract and mix</li>
         <li>Combine with sugar and baking powder and stir</li>
